Adição de subtítulos

--- a/tarefas.html
+++ b/tarefas.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <h1>Minhas Tarefas</h1>
+        <h2>A Fazer</h2>
+        <h2>Fazendo</h2>
+        <h2>Concluídas</h2>
     </body>
 </html>
