Lista de tarefas ‘A Fazer’

--- a/tarefas.html
+++ b/tarefas.html
@@ -6,6 +6,11 @@
     <body>
         <h1>Minhas Tarefas</h1>
         <h2>A Fazer</h2>
+        <ul>
+            <li>Comprar mantimentos</li>
+            <li>Estudar para a prova</li>
+            <li>Limpar a casa</li>
+        </ul>
         <h2>Fazendo</h2>
         <h2>Concluídas</h2>
     </body>
