Lista de tarefas ‘Concluídas’

--- a/tarefas.html
+++ b/tarefas.html
@@ -13,5 +13,10 @@
         </ul>
         <h2>Fazendo</h2>
         <h2>Concluídas</h2>
+        <ul>
+            <li>Enviar e-mails</li>
+            <li>Fazer exercícios</li>
+            <li>Organizar documentos</li>
+        </ul>
     </body>
 </html>
