Lista de tarefas ‘Fazendo’

--- a/tarefas.html
+++ b/tarefas.html
@@ -12,6 +12,11 @@
             <li>Limpar a casa</li>
         </ul>
         <h2>Fazendo</h2>
+        <ul>
+            <li>Escrever relatório</li>
+            <li>Assistir a aula online</li>
+            <li>Preparar almoço</li>
+        </ul>
         <h2>Concluídas</h2>
         <ul>
             <li>Enviar e-mails</li>
