Adição de nova tarefa: lavar o carro

--- a/tarefas.html
+++ b/tarefas.html
@@ -10,6 +10,7 @@
             <li>Comprar mantimentos</li>
             <li>Estudar para a prova</li>
             <li>Limpar a casa</li>
+            <li>Lavar o carro</li>
         </ul>
         <h2>Fazendo</h2>
         <ul>
