--- a/tarefas.html
+++ b/tarefas.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Tarefas</title>
+        <style>
+            h1 {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Minhas Tarefas</h1>
