Substituição de subtítulo

--- a/tarefas.html
+++ b/tarefas.html
@@ -18,7 +18,7 @@
             <li>Assistir a aula online</li>
             <li>Preparar almoço</li>
         </ul>
-        <h2>Concluídas</h2>
+        <h2>Finalizadas</h2>
         <ul>
             <li>Enviar e-mails</li>
             <li>Fazer exercícios</li>
